# Uav-chatbot

./: .gitignore  README.md  render.yaml  run-dev.ps1  vercel.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  constants.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  labels.py  predict.py  samples.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: __init__.py  prediction.py
backend/app/services/: label_catalog.py  recommendations.py
backend/app/services/inference/: __init__.py  base.py  factory.py  huggingface_bert.py  mock.py
backend/data/: sample_prompts.json
backend/tests/: conftest.py  test_health.py  test_inference_mock.py  test_labels.py  test_predict.py  test_samples.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: admin-view.tsx  analyzer-view.tsx  confidence-bar.tsx  result-panel.tsx  sample-prompt-chips.tsx  session-history.tsx  site-header.tsx  theme-provider.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/tests/e2e/: smoke.spec.ts
gsd-cursor/docs/: GSD-CURSOR-ADAPTATION.md
gsd-cursor/scripts/: migrate.ps1
gsd-cursor/src/agents/: gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
gsd-cursor/src/templates/: project.md
(+30 files in other folders)
